# wicrawl-debian

./: .#Makefile.1.13  .#Makefile.1.14  .#Makefile.1.15  .#Makefile.1.16  .#Makefile.1.17  Makefile  Makefile.in  README  config.mk  configure  configure.ac  cvsupdate.sh  wicrawl.conf
debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  init.d.lsb.ex  manpage  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch  watch.ex  wicrawl-default.ex  wicrawl-plugins.install  wicrawl.doc-base.EX  wicrawl.docs  wicrawl.install
discovery/: Makefile  ath.sh  base64.c  darwin.c  discovery.c  freebsd.c  hash.c  hashtest  hashtest.c  linux.c  malloctest.c  parse.c  parse2.c  skeleton.c  testclient.c  version.c
doc/: BUILDING  CHANGELOG  FAQ  IPC2  README  README.developers  README.plugins  TODO
hooks/discovery/: S00gpsd
hooks/post-ap/: S00template
hooks/pre-ap/: S00template
include/: 80211.h  discovery.h  errlib.h  hash.h  ieee80211_radiotap.h  linux_wireless.h  util.h  version.h  wicrawl.h
include/perl/: AccessPoint.pm  Plugin.pm  Preferences.pm  Profile.pm
plugins/: Makefile  plugin-engine  plugin-engine.in
plugins/aircrack-wep-cracking/: README  aircrack-wepcrack.pl  (+1 more)
profiles/: all.conf  covert.conf  custom.conf  default.conf  discovery.conf  pentest.conf
ui/: wicrawl  wicrawl-curses  wicrawl-curses.in  wicrawl-gtk  wicrawl-gtk.conf  wicrawl-gtk.in  wicrawl.in
util/: Makefile  associated.c  errlib.c  util.c
(+326 files in other folders)
