#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(wicrawl, 0.4a, david@newgas.net)

# Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_SUBST(package, wicrawl)

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
